prepared framework foundation and finished employee signup page + employee memory dao

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NetworkMeUp</string>
+    <string name="ok">OK</string>
+    <string name="continue_to_login">Continue To Login Page</string>
 </resources>
