--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NetworkMeUp</string>
     <string name="ok">OK</string>
     <string name="continue_to_login">Continue To Login Page</string>
+    <string name="continue_to_home_page">MOVE BACK TO HOME PAGE</string>
 </resources>
